@@ -46,6 +46,8 @@ wxGTK:
 - Base library is now binary compatible when built with wxGTK and wxMotif.
 - wxTextCtrl::XYToPosition, PositionToXY and GetLineLength calls are now
   instantaneous in case of GTK+2 multi-line controls (Mart Raudsepp)
+- Added support for left, centre and right text alignment attributes under
+  GTK+2 multi-line text controls (Mart Raudsepp)
 
 wxOS2
 
